tests/typechecker/should_fail/invalid_field_order.csp
P(x) = x?y$z -> STOP